# rpi-deploy

./: .gitignore  README.md
genai/: README.md
image_classification/: README.md
image_classification/cpp/: CMakeLists.txt  resnet18.cpp
image_classification/python/: main.py  resnet.py  resnet18.ipynb  train.py
llm/: README.md
llm/python/: gpt2.ipynb  n-gram.ipynb
objection_detection/: README.md
objection_detection/cpp/nanodet/: CMakeLists.txt  nanodet.cpp  nanodet_backup.cpp
objection_detection/cpp/yolov8_s/: CMakeLists.txt  yolov8_s.cpp
objection_detection/cpp/yolov8n/: CMakeLists.txt  yolov8.cpp  yolov8_s.cpp
objection_detection/python/: nanodet.ipynb  nanodet.py  nanodet2.py  yolov5_s.ipynb  yolov8n.ipynb
vlm/: README.md
